add template stub for cross-account role
Signed-off-by: Daniel Stamer <daniel.stamer@cloudreach.com>

--- a/lib/init/lz.yaml
+++ b/lib/init/lz.yaml
@@ -1,11 +1,9 @@
 # This is the central config for lz.
 
-# Specify a common prefix which lz will attempt to prepend to all resources.
-lz_prefix: 'lz' 
+# Account ID of organization master payer, this will be setup as organization
+# root. It will also act as trusted authority to assume the admin roles from.
+root_account_id: 123456789012
 
-# Account ID of organization master payer, this will be setup as organization root.
-master_payer_account_id: 123456789012
-
-# Choose the name of the IAM role which lz will provision to deploy your landing zone.
-lz_admin_role_name: 'lzadm'
-
+# Pre-configured external ID to harden access to cross-account admin role.
+# CHANGE THIS!
+sts_external_id: 'change-me'
