add stub org tree to config skeleton
Signed-off-by: Daniel Stamer <daniel.stamer@cloudreach.com>

--- a/lib/init/dlz.yaml
+++ b/lib/init/dlz.yaml
@@ -15,3 +15,18 @@ restricted_roles:
  - Developer
  - Administrator
 
+org_tree:
+  dev: []
+  test: []
+  prod:
+    platform:
+      - acme-platform-logs
+      - acme-platform-scans
+      - acme-platform-ids
+      - acme-platform-services
+    network:
+      - acme-net-hub
+    applications:
+      - acme-app-demo-dev
+      - acme-app-demo-test
+      - acme-app-demo-prod
